--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "igraph-sys"
-version = "0.0.0"
+version = "0.0.1"
 edition = "2021"
 links = "igraph"
 description = "Rust bindings to igraph c library"
 categories = ["api-bindings"]
 
-license = "MIT"
+license = "GPL-2.0-or-later"
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
